--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--Combine all JavaScript?-->
     <script type="text/javascript" src="./js/nodes.js"></script>
     <script type="text/javascript" src="./js/index.js" defer></script>
+    <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,14 +30,15 @@
   </nav>
   <body>
     <canvas id="nodes"></canvas>
-    <div id="temp"></div>
+    <div id="temp">
+      <div class="popup" id="popup">Popup Content</div>
+    </div>
     <!--People Section-->
     <div id="flex-container">
-      <div class="box-1 double">
+      <div id="element" class="box-1 double hover-element">
         <button class="head"></button>
         <button id="person-1" class="enlarge"></button>
       </div>
-      <div class="overlay"></div>
       <div class="box-1 double">
         <button class="head"></button>
         <button id="person-2" class="enlarge"></button>
