--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
     </div>
 
     <!--Dividing section-->
-    <div class="divide-bar"><h1>Subject...</h1></div>
+    <div class="divide-bar">
+      <h1>Subject...</h1>
+    </div>
   </body>
 </html>
