--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     />
     <title>A.I. Tech</title>
   </head>
+  <!--Title on top-->
   <nav id="nav-container">
     <div id="title">
       <h1 style="display: inline-block">Group 4:</h1>
@@ -30,6 +31,7 @@
   </nav>
   <body>
     <canvas id="nodes"></canvas>
+    <!--Pop up element sections, can be rearranged if the area is not where we want the content to be-->
     <div id="temp">
       <div class="popup" id="popup">Popup Content</div>
     </div>
