--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     />
     <title>A.I. Tech</title>
   </head>
+
+
   <!--Title on top-->
   <nav id="nav-container">
     <div id="title">
@@ -31,10 +33,10 @@
   </nav>
   <body>
     <canvas id="nodes"></canvas>
+
     <!--Pop up element sections, can be rearranged if the area is not where we want the content to be-->
-    <div id="temp">
       <div class="popup" id="popup">Popup Content</div>
-    </div>
+
     <!--People Section-->
     <div id="flex-container">
       <div id="element" class="box-1 double hover-element">
@@ -72,6 +74,8 @@
     </div>
 
     <!--Dividing section-->
-    <div class="divide-bar"><h1>Subject...</h1></div>
+    <div class="divide-bar"><h1>Subject...</h1>
+      <p>lorem ipsum...</p>
+    </div>
   </body>
 </html>
