--- a/index.html
+++ b/index.html
@@ -75,3 +75,37 @@
     <div class="divide-bar"><h1>Subject...</h1></div>
   </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      /* CSS styles for the bottom section */
+      .bottom-section { 
+        background-color: #3498DB;
+        padding: 20px;
+        align: center
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Project Overview -->
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">How We Created AI Tech</button>
+      <div id="myDropdown" class="dropdown-content">
+      </div>
+    </div>
+
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">Lessons We've Learned Along the Way</button>button>
+      <div id="myDropdown" class="dropdown-content">
+        <div class="popup" onclick="myFunction()">Creating a New Running HTML
+          <span class="popuptext" id="myPopup">Popup text...</span>
+      </div>
+    </div>
+
+    
+</body>
+</html>
