--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--Combine all JavaScript?-->
     <script type="text/javascript" src="./js/nodes.js"></script>
     <script type="text/javascript" src="./js/index.js" defer></script>
+    <script type="text/javascript" src="./js/bottomsection.js" defer></script>
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
