--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
         <div class="popup" onclick="myFunction()">Creating a New Running HTML
           <span class="popuptext" id="myPopup">Popup text...</span>
       </div>
+        <div class="popup" onclick="myFunction()">Drawing the Website's Illstruations
+          <span class="popuptext" id="myPopup">Popup text...</span>
     </div>
 
     
