--- a/index.html
+++ b/index.html
@@ -102,11 +102,14 @@
     <div class="dropdown">
       <button onclick="myFunction()" class="dropbtn">Lessons We've Learned Along the Way</button>button>
       <div id="myDropdown" class="dropdown-content">
-        <div class="popup" onclick="myFunction()">Creating a New Running HTML
+        <div class="popup" onclick="myFunction()">Phase1:Creating a New Running HTML
           <span class="popuptext" id="myPopup">Popup text...</span>
       </div>
-        <div class="popup" onclick="myFunction()">Drawing the Website's Illstruations
+        <div class="popup" onclick="myFunction()">Phase 2:Drawing the Website's Illstruations
           <span class="popuptext" id="myPopup">Popup text...</span>
+    </div>
+    <div class="popup" onclick="myFunction()">Phase 3:Event Listeners and Hover Functions in Javascript
+      <span class="popuptext" id="myPopup">Popup text...</span>
     </div>
 
     
