--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
   <body>
     <!-- Project Overview -->
     <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">How We Created AI Tech</button>
+      <button onclick="myFunction()" class="dropbtn">Lessons We've Learned Along the Way</button>
       <div id="myDropdown" class="dropdown-content">
       </div>
     </div>
 
     <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">Lessons We've Learned Along the Way</button>button>
+      <button onclick="myFunction()" class="dropbtn">How We Created AI Tech</button>button>
       <div id="myDropdown" class="dropdown-content">
         <div class="popup" onclick="myFunction()">Phase1:Creating a New Running HTML
           <span class="popuptext" id="myPopup">Popup text...</span>
@@ -111,7 +111,8 @@
     <div class="popup" onclick="myFunction()">Phase 3:Event Listeners and Hover Functions in Javascript
       <span class="popuptext" id="myPopup">Popup text...</span>
     </div>
-
+    <div class="popup" onclick="myFunction()">Stylizing Each Element and Person in CSS
+      <span class="popuptext" id="myPopup">Popup text....</span>
     
 </body>
 </html>
