--- a/index.html
+++ b/index.html
@@ -3,39 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie-edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>A.I. Tech</title>
+    <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.min.js"
-      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-      crossorigin="anonymous"
-    ></script>
-    <!--Combine all JavaScript?-->
-    <script type="text/javascript" src="./js/nodes.js"></script>
-    <script type="text/javascript" src="./js/index.js" defer></script>
-    <script type="text/javascript" src="./js/bottomsection.js" defer></script>
-    <!--Font-->
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>A.I. Tech</title>
+    <!-- Scripts -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+    <script type="text/javascript" src="./js/nodes.js"></script>
+    <script type="text/javascript" src="./js/index.js" defer></script>
+    <script type="text/javascript" src="./js/bottomsection.js" defer></script>
   </head>
-  <!--Title on top-->
-  <nav id="nav-container">
-    <div id="title">
-      <h1 style="display: inline-block">Group 4:</h1>
-      <p style="display: inline-block">AI Technology</p>
-    </div>
-  </nav>
   <body>
+    <!--CANVAS BACKDROP-->
     <canvas id="nodes"></canvas>
+    <!--Title on top-->
+    <section id="container-title">
+      <div id="title">
+        <h1>Group 4:</h1>
+        <p>AI Technology</p>
+      </div>
+    </section>
     <!--Pop up element sections, can be rearranged if the area is not where we want the content to be-->
-    <div id="temp">
-      <div class="popup" id="popup">Popup Content</div>
+    <div id="container-popup">
+      <div class="popup" id="popup">
+        <img src="img/infographic_1.jpg" />
+        <p>Test</p>
+      </div>
     </div>
+    <div id="temp"></div>
     <!--People Section-->
     <div id="flex-container">
       <div id="element" class="box-1 double hover-element">
@@ -71,48 +77,76 @@
         <button id="person-8" class="enlarge"></button>
       </div>
     </div>
-
     <!--Dividing section-->
-    <div class="divide-bar"><h1>Subject...</h1></div>
+    <div class="divide-bar"><h1>Information</h1></div>
+    <div id="information-container">
+      <div id="information-start" class="information-section show">
+        <p>What is A.I.?</p>
+      </div>
+      <div class="information-section">
+        <p>
+          Artificial intelligence is technology that allows computers and
+          machines to engage in human intelligence in order to accomplish
+          problem solving. Emerging as a field of computer science, AI seeks to
+          process data information while recognizing patterns and making
+          predictions/decisions modeled after human judgment. Linked to machine
+          and deep learning, artificial intelligence “learns” from existing
+          information that is programmed within the system. This allows the
+          machine to facilitate cognitive functions that are usually associated
+          with human minds and subsequent thinking.
+        </p>
+      </div>
+    </div>
+
+    <!--I am not sure why the !DOCTYPE was added again with an additional header so we may want to merge the two up top, I would also refrain from trying inline coding because it might clash with whatever code you have in your JS file.-->
+
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <style>
+          /* CSS styles for the bottom section */
+          .bottom-section {
+            background-color: #3498db;
+            padding: 20px;
+            align: center;
+          }
+        </style>
+      </head>
+      <body>
+        <!-- Project Overview -->
+        <div class="dropdown">
+          <button onclick="myFunction()" class="dropbtn">
+            Lessons We've Learned Along the Way
+          </button>
+          <div id="myDropdown" class="dropdown-content"></div>
+        </div>
+
+        <div class="dropdown">
+          <button onclick="myFunction()" class="dropbtn">
+            How We Created AI Tech</button
+          >button>
+          <div id="myDropdown" class="dropdown-content">
+            <div class="popup" onclick="myFunction()">
+              Phase1:Creating a New Running HTML
+              <span class="popuptext" id="myPopup">Popup text...</span>
+            </div>
+            <div class="popup" onclick="myFunction()">
+              Phase 2:Drawing the Website's Illstruations
+              <span class="popuptext" id="myPopup">Popup text...</span>
+            </div>
+            <div class="popup" onclick="myFunction()">
+              Phase 3:Event Listeners and Hover Functions in Javascript
+              <span class="popuptext" id="myPopup">Popup text...</span>
+            </div>
+            <div class="popup" onclick="myFunction()">
+              Stylizing Each Element and Person in CSS
+              <span class="popuptext" id="myPopup">Popup text....</span>
+            </div>
+          </div>
+        </div>
+      </body>
+    </html>
   </body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-      /* CSS styles for the bottom section */
-      .bottom-section { 
-        background-color: #3498DB;
-        padding: 20px;
-        align: center
-      }
-    </style>
-  </head>
-  <body>
-    <!-- Project Overview -->
-    <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">Lessons We've Learned Along the Way</button>
-      <div id="myDropdown" class="dropdown-content">
-      </div>
-    </div>
-
-    <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">How We Created AI Tech</button>button>
-      <div id="myDropdown" class="dropdown-content">
-        <div class="popup" onclick="myFunction()">Phase1:Creating a New Running HTML
-          <span class="popuptext" id="myPopup">Popup text...</span>
-      </div>
-        <div class="popup" onclick="myFunction()">Phase 2:Drawing the Website's Illstruations
-          <span class="popuptext" id="myPopup">Popup text...</span>
-    </div>
-    <div class="popup" onclick="myFunction()">Phase 3:Event Listeners and Hover Functions in Javascript
-      <span class="popuptext" id="myPopup">Popup text...</span>
-    </div>
-    <div class="popup" onclick="myFunction()">Stylizing Each Element and Person in CSS
-      <span class="popuptext" id="myPopup">Popup text....</span>
-    
-</body>
 </html>
