--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!--I am not sure why the !DOCTYPE was added again with an additional header so we may want to merge the two up top, I would also refrain from trying inline coding because it might clash with whatever code you have in your JS file.-->
 
-    <!DOCTYPE html>
+    <!-- <!DOCTYPE html>
     <html lang="en">
       <head>
         <meta charset="UTF-8" />
@@ -114,39 +114,37 @@
           }
         </style>
       </head>
-      <body>
-        <!-- Project Overview -->
-        <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">
-            Lessons We've Learned Along the Way
-          </button>
-          <div id="myDropdown" class="dropdown-content"></div>
-        </div>
+      <body> -->
+    <!-- Project Overview -->
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">
+        Lessons We've Learned Along the Way
+      </button>
+      <div id="myDropdown" class="dropdown-content"></div>
+    </div>
 
-        <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">
-            How We Created AI Tech</button
-          >button>
-          <div id="myDropdown" class="dropdown-content">
-            <div class="popup" onclick="myFunction()">
-              Phase1:Creating a New Running HTML
-              <span class="popuptext" id="myPopup">Popup text...</span>
-            </div>
-            <div class="popup" onclick="myFunction()">
-              Phase 2:Drawing the Website's Illstruations
-              <span class="popuptext" id="myPopup">Popup text...</span>
-            </div>
-            <div class="popup" onclick="myFunction()">
-              Phase 3:Event Listeners and Hover Functions in Javascript
-              <span class="popuptext" id="myPopup">Popup text...</span>
-            </div>
-            <div class="popup" onclick="myFunction()">
-              Stylizing Each Element and Person in CSS
-              <span class="popuptext" id="myPopup">Popup text....</span>
-            </div>
-          </div>
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">
+        How We Created AI Tech</button
+      >button>
+      <div id="myDropdown" class="dropdown-content">
+        <div class="popup" onclick="myFunction()">
+          Phase1:Creating a New Running HTML
+          <span class="popuptext" id="myPopup">Popup text...</span>
         </div>
-      </body>
-    </html>
+        <div class="popup" onclick="myFunction()">
+          Phase 2:Drawing the Website's Illstruations
+          <span class="popuptext" id="myPopup">Popup text...</span>
+        </div>
+        <div class="popup" onclick="myFunction()">
+          Phase 3:Event Listeners and Hover Functions in Javascript
+          <span class="popuptext" id="myPopup">Popup text...</span>
+        </div>
+        <div class="popup" onclick="myFunction()">
+          Stylizing Each Element and Person in CSS
+          <span class="popuptext" id="myPopup">Popup text....</span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
