--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     ></script>
     <script type="text/javascript" src="./js/nodes.js"></script>
     <script type="text/javascript" src="./js/index.js" defer></script>
-    <script type="text/javascript" src="./js/bottomsection.js" defer></script>
+    <!-- <script type="text/javascript" src="./js/bottomsection.js" defer></script> -->
   </head>
   <body>
     <!--CANVAS BACKDROP-->
