--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </head>
       <body> -->
     <!-- Project Overview -->
-    <div class="dropdown">
+    <!-- <div class="dropdown">
       <button onclick="myFunction()" class="dropbtn">
         Lessons We've Learned Along the Way
       </button>
@@ -145,6 +145,6 @@
           <span class="popuptext" id="myPopup">Popup text....</span>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
