--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="./js/nodes.js" defer></script>
+    <script type="text/javascript" src="./js/nodes.js"></script>
     <script type="text/javascript" src="./js/index.js" defer></script>
-    <!-- <script type="text/javascript" src="./js/bottomsection.js" defer></script> -->
+    <script type="text/javascript" src="./js/bottomsection.js" defer></script>
   </head>
   <body>
     <!--CANVAS BACKDROP-->
