--- a/index.html
+++ b/index.html
@@ -100,53 +100,104 @@
 
     <!--I am not sure why the !DOCTYPE was added again with an additional header so we may want to merge the two up top, I would also refrain from trying inline coding because it might clash with whatever code you have in your JS file.-->
 
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <style>
-          /* CSS styles for the bottom section */
-          .bottom-section {
-            background-color: #3498db;
-            padding: 20px;
-            align: center;
-          }
-        </style>
-      </head>
-      <body>
-        <!-- Project Overview -->
-        <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">
-            Lessons We've Learned Along the Way
-          </button>
-          <div id="myDropdown" class="dropdown-content"></div>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title> Project Overview</title>
+<style>
+/* Style for navigation bar */
+   .navbar {
+    overflow:hidden
+    background-color: #333;
+     }
+/* Style for the navigation bar links */
+  .navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+  }
 
-        <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">
-            How We Created AI Tech</button
-          >button>
-          <div id="myDropdown" class="dropdown-content">
-            <div class="popup" onclick="myFunction()">
-              Phase1:Creating a New Running HTML
-              <span class="popuptext" id="myPopup">Popup text...</span>
-            </div>
-            <div class="popup" onclick="myFunction()">
-              Phase 2:Drawing the Website's Illstruations
-              <span class="popuptext" id="myPopup">Popup text...</span>
-            </div>
-            <div class="popup" onclick="myFunction()">
-              Phase 3:Event Listeners and Hover Functions in Javascript
-              <span class="popuptext" id="myPopup">Popup text...</span>
-            </div>
-            <div class="popup" onclick="myFunction()">
-              Stylizing Each Element and Person in CSS
-              <span class="popuptext" id="myPopup">Popup text....</span>
+  /* Style for the dropdown content */
+  .drop-down content {
+    display: none;
+    position: absolute;
+    background-color: #304ab4;
+    min-width: 160px;
+    z-index: 1;
+  }
+
+  /* Style for the dropdown links */
+  .dropdown-content a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  */ Style for the active link */
+  .active {
+    background-color: #555;
+  }
+
+  */ Style for the hidden text */
+  .hidden-text {
+    display: none;
+    margin-top: 20px; /* Add some spacing below the navigation bar */
+  }
+  </style>
+</head>
+<body>
+  <!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
+  <main id="content">
+    <section>
+      <div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn">How We Created AI Tech</button>
+        <div id="myDropdown" class="dropdown-content">
+          <div class="navbar">
+            <a class="active" href="#" id="link1">Phase 1: Creating New HTML From Scratch</a>
+            <a class="active" href="#" id="link2">Phase 2: Drawing our Webpage's Illstruations</a>
+            <a class="active" href="#" id="link3">Phase 3: Event Listeners and Hover Functions in Javascript</a>
+            <a class="active" href="#" id="link4">Phase 4: Stylizing the Text and Other Elements in CSS</a>
+            <div class="dropdown">
+              <a href="#" id="link2">Link 2</a>
+              <a href="#" id="link3">Link 3</a>
+              <a href="#" id="link4">Link 4</a>
             </div>
           </div>
         </div>
-      </body>
-    </html>
-  </body>
+
+        <!-- Text Sections -->
+        <div id="section1" class="hidden-text">
+          <p>For our project, AI Technology, the very first task on our team's to-do list was to create a brand new HTML file from 
+             scratch that included the main elements of our webpage and cruical details for it's overall structure. The basic
+             idea of our project was to create an immersive and highly interactive tool that educates users on the history of
+             artificial inelligence, how it's been incorpated into particular job fields and that highlights the inaccuracy of 
+             AI, from time to time. As for the overall design, of our webpage, our team decided that we wanted to include two
+             main imgaes of a group of people and a single robot, a hisrotical time-line of important events that have 
+             happend in relation to AI technologya and a bottom section that describes more in-depthly the creation process. 
+             As for the group of people, when users hover them a parapgrpah of text should appear above them that includes 
+             fact-checked and peer-rewieved infrormation reagrding how AI technology has impacted the labor force, both 
+             positive and negative aspecst of it, and how/why it may not always be trustworthy. Then, when the robots 
+             hovered over it angrily shakes and random, falsified information is generated instead. To do such, we added
+             numerous different sections to our HTML, like a "People" section for the fake people that will be a part of
+             the webpage's visuals, a dividing section that explains what AI is in general, and a bottom section for additional 
+             links/info.</p>
+        </div>
+        <div id="section2" class="hidden-text">
+          <p>The main images that we utilized for AI Technology, of the people and the robot were hand-drawn using Abode Illstrator 
+             and then converted into vector images. After they were converted, Sav linked them directly into our HTML and to help
+             ensure that they were all aligned with one another fit them into a flex contianer/flex box. </p>
+        </div>
+        <div id=section3" class=hidden-text">
+          <p>The...</p>
+        </div>d
+        <div id=section3" class="hidden-text">
+          <p>...</p>
+        </div>  
+    </section>
+</body>
 </html>
