--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
              main imgaes of a group of people and a single robot, a hisrotical time-line of important events that have 
              happend in relation to AI technologya and a bottom section that describes more in-depthly the creation process. 
              As for the group of people, when users hover them a parapgrpah of text should appear above them that includes 
-             fact-checked and peer-rewieved infrormation reagrding how AI technology has impacted the labor force, both 
+             fact-checked and peer-rewieved information reagrding how AI technology has impacted the labor force, both 
              positive and negative aspecst of it, and how/why it may not always be trustworthy. Then, when the robots 
              hovered over it angrily shakes and random, falsified information is generated instead. To do such, we added
              numerous different sections to our HTML, like a "People" section for the fake people that will be a part of
