--- a/index.html
+++ b/index.html
@@ -173,24 +173,24 @@
         <!-- Text Sections -->
         <div id="section1" class="hidden-text">
           <p>For our project, AI Technology, the very first task on our team's to-do list was to create a brand new HTML file from 
-             scratch that included the main elements of our webpage and cruical details for it's overall structure. The basic
+             scratch that included the main elements of our webpage and crucial details for it's overall structure. The basic
              idea of our project was to create an immersive and highly interactive tool that educates users on the history of
-             artificial inelligence, how it's been incorpated into particular job fields and that highlights the inaccuracy of 
-             AI, from time to time. As for the overall design, of our webpage, our team decided that we wanted to include two
-             main imgaes of a group of people and a single robot, a hisrotical time-line of important events that have 
-             happend in relation to AI technologya and a bottom section that describes more in-depthly the creation process. 
-             As for the group of people, when users hover them a parapgrpah of text should appear above them that includes 
+             artificial inetlligence, how it's been incorporated into particular job fields and that highlights the inaccuracy of 
+             AI, from time to time. As for the overall design, of our webpage, our team decided that we wanted to include the two
+             main images of people and a single robot, a historical timeline of important events that's occurred in reference to
+             AI technologya and a bottom section that describes more in-depthly the creation process. 
+             As for the people will be including, when users hover them a parapgraph of text should appear that states 
              fact-checked and peer-rewieved information reagrding how AI technology has impacted the labor force, both 
-             positive and negative aspecst of it, and how/why it may not always be trustworthy. Then, when the robots 
+             positive and negative aspecst to it, and how/why it may not always be trustworthy. Then, when the robots 
              hovered over it angrily shakes and random, falsified information is generated instead. To do such, we added
-             numerous different sections to our HTML, like a "People" section for the fake people that will be a part of
-             the webpage's visuals, a dividing section that explains what AI is in general, and a bottom section for additional 
+             numerous different sections to our HTML, like a "People" section that provides each individual person with their own
+             button id's and hover element, a dividing section that explains what AI is in general, and a bottom section for additional 
              links/info.</p>
         </div>
         <div id="section2" class="hidden-text">
-          <p>The main images that we utilized for AI Technology, of the people and the robot were hand-drawn using Abode Illstrator 
-             and then converted into vector images. After they were converted, Sav linked them directly into our HTML and to help
-             ensure that they were all aligned with one another fit them into a flex container/flexbox. </p>
+          <p>The main images that we utilized for AI Technology, of the people and the robot were hand-drawn using Abode Illustrator 
+             and then converted into vector images. After they were converted, Sav linked them directly into our HTML and aligned 
+             each image, fitting them into a flex container/flexbox. </p>
         </div>
         <div id=section3" class=hidden-text">
           <p>The...</p>
