--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <style>
 /* Style for navigation bar */
    .navbar {
-    overflow:hidden
+    overflow: hidden
     background-color: #333;
      }
 /* Style for the navigation bar links */
@@ -162,11 +162,6 @@
             <a class="active" href="#" id="link2">Phase 2: Drawing our Webpage's Illstruations</a>
             <a class="active" href="#" id="link3">Phase 3: Event Listeners and Hover Functions in Javascript</a>
             <a class="active" href="#" id="link4">Phase 4: Stylizing the Text and Other Elements in CSS</a>
-            <div class="dropdown">
-              <a href="#" id="link2">Link 2</a>
-              <a href="#" id="link3">Link 3</a>
-              <a href="#" id="link4">Link 4</a>
-            </div>
           </div>
         </div>
 
@@ -192,10 +187,10 @@
              and then converted into vector images. After they were converted, Sav linked them directly into our HTML and aligned 
              each image, fitting them into a flex container/flexbox. </p>
         </div>
-        <div id=section3" class=hidden-text">
+        <div id="section3" class="hidden-text">
           <p>The...</p>
         </div>d
-        <div id=section3" class="hidden-text">
+        <div id="section4" class="hidden-text">
           <p>...</p>
         </div> 
 
