--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   As for the people will be including, when users hover them a parapgraph of text should appear that states 
   fact-checked and peer-rewieved information reagrding how AI technology has impacted the labor force, both 
   positive and negative aspecst to it, and how/why it may not always be trustworthy. Then, when the robots 
-  hovered over it angrily shakes and random, falsified information is generated instead. To do such, we added
+  hovered over it angrily shakes and generates random falsified information instead. To do such, we added
   numerous different sections to our HTML, like a "People" section that provides each individual person with their own
   button id's and hover element, a dividing section that explains what AI is in general, and a bottom section for additional 
   links/info.</p>
