--- a/index.html
+++ b/index.html
@@ -111,20 +111,20 @@
 <h1>How AI Technology Came to Life (The Creation Process)</h1>
 
 <button class="reveal-btn" onclick="toggleText('text1')">Phase 1: Creating New HTML</button>
-  <p id="text1" class="hidden">For our project, AI Technology, the very first task on our team's to-do list was to create a brand new HTML file from 
-  scratch that included the main elements of our webpage and crucial details for it's overall structure. The basic
-  idea of our project was to create an immersive and highly interactive tool that educates users on the history of
-  artificial inetlligence, how it's been incorporated into particular job fields and that highlights the inaccuracy of 
-  AI, from time to time. As for the overall design, of our webpage, our team decided that we wanted to include the two
-  main images of people and a single robot, a historical timeline of important events that's occurred in reference to
-  AI technologya and a bottom section that describes more in-depthly the creation process. 
-  As for the people will be including, when users hover them a parapgraph of text should appear that states 
-  fact-checked and peer-rewieved information reagrding how AI technology has impacted the labor force, both 
-  positive and negative aspecst to it, and how/why it may not always be trustworthy. Then, when the robots 
-  hovered over it angrily shakes and generates random falsified information instead. To do such, we added
+  <p id="text1" class="hidden">For our project, AI Technology, the very first task on our team's to-do list was to create a 
+  brand new HTML file from  scratch that included the main elements of our webpage and crucial details for it's overall 
+  structure. The basic idea of our project was to create an immersive and highly interactive tool that educates users on 
+  the history of artificial intelligence, how it's been incorporated into particular job fields and that highlights the 
+  inaccuracy of  AI, from time to time. As for the overall design, of our webpage, our team decided that we wanted to 
+  include the two main images of people and a single robot, a historical timeline of important events that's occurred in 
+  reference to AI technology and a bottom section that describes more in-depthly the creation process. As for the 
+  illstrations of people that the main face of our webpage will include, when users hover them a paragraph of 
+  text should appear that states fact-checked and peer-reviewed information regrading how AI technology has impacted 
+  the labor force,both positively and negatively and how/why it may not always be trustworthy. Additionally, when users 
+  hover over our robot, it should angrily shake and generate random falsified information instead. To do such, we added
   numerous different sections to our HTML, like a "People" section that provides each individual person with their own
-  button id's and hover element, a dividing section that explains what AI is in general, and a bottom section for additional 
-  links/info.</p>
+  button id's and an "enlarge" function, a dividing section that explains what AI is in general, and a bottom section for 
+  additional links/info.</p>
 
   <button class="reveal-btn" onclick="toggleText('text2')">Phase 2: Drawing the Illstruations</button>
   <p id="text2" class="hidden">The main images that we utilized for AI Technology, of the people and the robot were hand-drawn using Abode Illustrator 
