--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
   inaccuracy of  AI, from time to time. As for the overall design, of our webpage, our team decided that we wanted to 
   include the two main images of people and a single robot, a historical timeline of important events that's occurred in 
   reference to AI technology and a bottom section that describes more in-depthly the creation process. As for the 
-  illstrations of people that the main face of our webpage will include, when users hover them a paragraph of 
-  text should appear that states fact-checked and peer-reviewed information regrading how AI technology has impacted 
+  illustrations of people that the main face of our webpage will include, when users hover them a paragraph of 
+  text should appear that states fact-checked and peer-reviewed information regarding how AI technology has impacted 
   the labor force,both positively and negatively and how/why it may not always be trustworthy. Additionally, when users 
   hover over our robot, it should angrily shake and generate random falsified information instead. To do such, we added
   numerous different sections to our HTML, like a "People" section that provides each individual person with their own
-  button id's and an "enlarge" function, a dividing section that explains what AI is in general, and a bottom section for 
+  button id's and "enlarge" functions, a dividing section that explains what AI is in general, and a bottom section for 
   additional links/info.</p>
 
   <button class="reveal-btn" onclick="toggleText('text2')">Phase 2: Drawing the Illstruations</button>
@@ -132,10 +132,10 @@
   each image, fitting them into a flex container/flexbox.</p>
 
   <button class="reveal-btn" onclick="toggleText('text3')">Phase 3: Event Listeners and Hover Functions</button>
-  <p id="text3" class="hidden"><../p>
+  <p id="text3" class="hidden"></p>
 
   <button class="reveal-btn" onclick="toggleText('text4')">Phase 4: Stylizing Text and Other Elements</button>
-  <p id="text4" class="hidden"><../p>
+  <p id="text4" class="hidden"></p>
 
   <button class="reveal-btn" onclick="toggleText('text5')">Phase 5: Finding Sources and Research</button>
   <p id="text5" class="hidden">...</p>
