--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>How AI Technology Came to Life (The Creation Process)</h1>
+<div class="How AI Technology Came to Life (The Creation Process)-section">
 
 <button class="reveal-btn" onclick="toggleText('text1')">Phase 1: Creating New HTML</button>
   <p id="text1" class="hidden">For our project, AI Technology, the very first task on our team's to-do list was to create a 
-  brand new HTML file from  scratch that included the main elements of our webpage and crucial details for it's overall 
+  brand new HTML file from scratch that included the main elements of our webpage and crucial details for it's overall 
   structure. The basic idea of our project was to create an immersive and highly interactive tool that educates users on 
   the history of artificial intelligence, how it's been incorporated into particular job fields and that highlights the 
   inaccuracy of  AI, from time to time. As for the overall design, of our webpage, our team decided that we wanted to 
@@ -132,7 +132,7 @@
   each image, fitting them into a flex container/flexbox.</p>
 
   <button class="reveal-btn" onclick="toggleText('text3')">Phase 3: Event Listeners and Hover Functions</button>
-  <p id="text3" class="hidden"></p>
+  <p id="text3" class="hidden">The</p>
 
   <button class="reveal-btn" onclick="toggleText('text4')">Phase 4: Stylizing Text and Other Elements</button>
   <p id="text4" class="hidden"></p>
