--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
   each image, fitting them into a flex container/flexbox.</p>
 
   <button class="reveal-btn" onclick="toggleText('text3')">Phase 3: Event Listeners and Hover Functions</button>
-  <p id="text3" class="hidden">The</p>
+  <p id="text3" class="hidden">For the third phase, we shifted our attention over to the Javascript portion, of our project and created four
+  different Javascript files.</p>
 
   <button class="reveal-btn" onclick="toggleText('text4')">Phase 4: Stylizing Text and Other Elements</button>
   <p id="text4" class="hidden"></p>
