--- a/index.html
+++ b/index.html
@@ -128,12 +128,14 @@
 
   <button class="reveal-btn" onclick="toggleText('text2')">Phase 2: Drawing the Illstruations</button>
   <p id="text2" class="hidden">The main images that we utilized for AI Technology, of the people and the robot were hand-drawn using Abode Illustrator 
-  and then converted into vector images. After they were converted, Sav linked them directly into our HTML and aligned 
-  each image, fitting them into a flex container/flexbox.</p>
+  and then converted into vector images. After they were converted, group member, Savvy Burch linked the inredible illustrations they had made directly 
+  into our main index.html and aligned each image, fitting them into a flex container/flexbox.</p>
 
   <button class="reveal-btn" onclick="toggleText('text3')">Phase 3: Event Listeners and Hover Functions</button>
   <p id="text3" class="hidden">For the third phase, we shifted our attention over to the Javascript portion, of our project and created four
-  different Javascript files.</p>
+  different Javascript files. For the first file, group member, Manuel Marshutz, formatted and coded our index.js file for the tema and through
+  such layed out the basic framework for our website. Within, the file he added background nodes and event listeners so that everytime one of the 
+  people were hovered over their illustration would be enlarged and the background behind them would darken.</p>
 
   <button class="reveal-btn" onclick="toggleText('text4')">Phase 4: Stylizing Text and Other Elements</button>
   <p id="text4" class="hidden"></p>
