--- a/index.html
+++ b/index.html
@@ -128,14 +128,17 @@
 
   <button class="reveal-btn" onclick="toggleText('text2')">Phase 2: Drawing the Illstruations</button>
   <p id="text2" class="hidden">The main images that we utilized for AI Technology, of the people and the robot were hand-drawn using Abode Illustrator 
-  and then converted into vector images. After they were converted, group member, Savvy Burch linked the inredible illustrations they had made directly 
+  and then converted into vector images. After they were converted, group member, Savvy Burch linked the inrcedible illustrations they had made directly 
   into our main index.html and aligned each image, fitting them into a flex container/flexbox.</p>
 
   <button class="reveal-btn" onclick="toggleText('text3')">Phase 3: Event Listeners and Hover Functions</button>
-  <p id="text3" class="hidden">For the third phase, we shifted our attention over to the Javascript portion, of our project and created four
-  different Javascript files. For the first file, group member, Manuel Marshutz, formatted and coded our index.js file for the tema and through
-  such layed out the basic framework for our website. Within, the file he added background nodes and event listeners so that everytime one of the 
-  people were hovered over their illustration would be enlarged and the background behind them would darken.</p>
+  <p id="text3" class="hidden">For the third phase, we shifted our attention over to implmenting the main basic functions that we wanted our webpage to have 
+  through Javascript and created four different Javascript files. For the first file, group member, Manuel Marshutz, formatted and coded our index.js file for 
+  the team and layed out the basic framework for our website. Within, the file he added background nodes and event listeners so that every time one of the 
+  people were hovered over their illustration would be enlarged and the background behind them would slightly darken.He then added event listeners to box 1 and
+  a separate Javascript for the popup content that's supposed to appear above the people, of our website, by applying callback functions. Next, Manuel also
+  created our Javascript, nodes.js file, using the data structure to set parameters for various elements like that of width, height, size, and etc.. He then added
+  event listeners and various functions for each node.</p>
 
   <button class="reveal-btn" onclick="toggleText('text4')">Phase 4: Stylizing Text and Other Elements</button>
   <p id="text4" class="hidden"></p>
