--- a/index.html
+++ b/index.html
@@ -100,14 +100,9 @@
 
     <!--I am not sure why the !DOCTYPE was added again with an additional header so we may want to merge the two up top, I would also refrain from trying inline coding because it might clash with whatever code you have in your JS file.-->
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
+<!--Dividing section-->
+<div class="divide-bar"><h1>Creation Process</h1></div>
+<div id="creation process-container">
 <div class="How AI Technology Came to Life (The Creation Process)-section">
 
 <button class="reveal-btn" onclick="toggleText('text1')">Phase 1: Creating New HTML</button>
