--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     <!--I am not sure why the !DOCTYPE was added again with an additional header so we may want to merge the two up top, I would also refrain from trying inline coding because it might clash with whatever code you have in your JS file.-->
 
 <!--Dividing section-->
-<div class="divide-bar"><h1>Creation Process</h1></div>
-<div id="creation process-container">
+<div class="divide-bar"><h1>How AI Technology Came to Life (The Creation Process)</h1></div>
+<div id="process-container">
 <div class="How AI Technology Came to Life (The Creation Process)-section">
 
 <button class="reveal-btn" onclick="toggleText('text1')">Phase 1: Creating New HTML</button>
