--- a/index.html
+++ b/index.html
@@ -110,45 +110,55 @@
 <body>
 
 <!--Dividing section-->
-<div class="divide-bar"><h1>How AI Technology Came to Life (The Creation Process)</h1></div>
+<div class="divide-bar"><h1>How AI Technology Came to Life</h1></div>
 <div id="process-container">
-<div class="How AI Technology Came to Life (The Creation Process)-section">
+  <p>The Creation Process</p>
+</div>
+  <div class="How AI Technology Came to Life (The Creation Process)-section">
+ <p>Phase 1: Creating New HTML
+    
+For our project, AI Technology, the very first task on our team's to-do list was to create a brand new HTML file from scratch that 
+included the main elements of our webpage and crucial details for it's overall structure. The basic idea of our project was to create 
+an immersive and highly interactive tool that educates users on the history of artificial intelligence, how it's been incorporated into 
+particular job fields and that highlights the inaccuracy of  AI, from time to time. As for the overall design, of our webpage, our team 
+decided that we wanted to include the two main images of people and a single robot, a historical timeline of important events that's 
+occurred in reference to AI technology and a bottom section that describes more in-depthly the creation process. As for the 
+illustrations of people that the main face of our webpage will include, when users hover them a paragraph of text should 
+appear that states fact-checked and peer-reviewed information regarding how AI technology has impacted the labor force,both 
+positively and negatively and how/why it may not always be trustworthy. Additionally, when users hover over our robot, it 
+should angrily shake and generate random falsified information instead. To do such, we added numerous different sections to our 
+HTML, like a "People" section that provides each individual person with their own button id's and "enlarge" functions, a dividing 
+section that explains what AI is in general, and a bottom section for additional links/info.</p>
 
-<button class="toggle-btn">Phase 1: Creating New HTML</button>
-<div class="hidden-text">For our project, AI Technology, the very first task on our team's to-do list was to create a 
-  brand new HTML file from scratch that included the main elements of our webpage and crucial details for it's overall 
-  structure. The basic idea of our project was to create an immersive and highly interactive tool that educates users on 
-  the history of artificial intelligence, how it's been incorporated into particular job fields and that highlights the 
-  inaccuracy of  AI, from time to time. As for the overall design, of our webpage, our team decided that we wanted to 
-  include the two main images of people and a single robot, a historical timeline of important events that's occurred in 
-  reference to AI technology and a bottom section that describes more in-depthly the creation process. As for the 
-  illustrations of people that the main face of our webpage will include, when users hover them a paragraph of 
-  text should appear that states fact-checked and peer-reviewed information regarding how AI technology has impacted 
-  the labor force,both positively and negatively and how/why it may not always be trustworthy. Additionally, when users 
-  hover over our robot, it should angrily shake and generate random falsified information instead. To do such, we added
-  numerous different sections to our HTML, like a "People" section that provides each individual person with their own
-  button id's and "enlarge" functions, a dividing section that explains what AI is in general, and a bottom section for 
-  additional links/info.</p>
 
-<button class="toggle-btn">Phase 2: Drawing the Illstruations</button>
-<div class="hidden">The main images that we utilized for AI Technology, of the people and the robot were hand-drawn using Abode Illustrator 
-  and then converted into vector images. After they were converted, group member, Savvy Burch linked the inrcedible illustrations they had made directly 
-  into our main index.html and aligned each image, fitting them into a flex container/flexbox.</p>
 
-<button class="toggle-btn">Phase 3: Event Listeners and Hover Functions</button>
-<div class="hidden">For the third phase, we shifted our attention over to implmenting the main basic functions that we wanted our webpage to have 
-  through Javascript and created four different Javascript files. For the first file, group member, Manuel Marshutz, formatted and coded our index.js file for 
-  the team and layed out the basic framework for our website. Within, the file he added background nodes and event listeners so that every time one of the 
-  people were hovered over their illustration would be enlarged and the background behind them would slightly darken.He then added event listeners to box 1 and
-  a separate Javascript for the popup content that's supposed to appear above the people, of our website, by applying callback functions. Next, Manuel also
-  created our Javascript, nodes.js file, using the data structure to set parameters for various elements like that of width, height, size, and etc.. He then added
-  event listeners and various functions for each node.</p>
+<p>Phase 2: Drawing the Illstruations
 
-<button class="toggle-btn">Phase 4: Stylizing Text and Other Elements</button>
-<div class="hidden"></p>
+The main images that we utilized for AI Technology, of the people and the robot were hand-drawn using Abode Illustrator 
+and then converted into vector images. After they were converted, group member, Savvy Burch linked the inrcedible 
+illustrations they had made directly into our main index.html and aligned each image, fitting them into a flex 
+container/flexbox.</p>
 
-<button class="toggle-btn">Phase 5: Finding Sources and Research</button>
-<div class="hidden">...</p>
+<p>Phase 3: Event Listeners and Hover Functions
+
+For the third phase, we shifted our attention over to implmenting the main basic functions that we wanted our webpage to have 
+through Javascript and created four different Javascript files. For the first file, group member, Manuel Marshutz, formatted and 
+coded our index.js file for the team and layed out the basic framework for our website. Within, the file he added background nodes 
+and event listeners so that every time one of the people were hovered over their illustration would be enlarged and the background 
+behind them would slightly darken.He then added event listeners to box 1 and a separate Javascript for the popup content that's 
+supposed to appear above the people, of our website, by applying callback functions. Next, Manuel also created our Javascript, 
+nodes.js file, using the data structure to set parameters for various elements like that of width, height, size, and etc.. He then 
+added event listeners and various functions for each node.</p>
+
+<p>Phase 4: Stylizing Text and Other Elements
+
+.....
+</p>
+
+<p>Phase 5: Finding Sources and Research
+
+...
+</p>
 
   <script src="script.js"></script>
   </body>
