edits to isbranch (sav)
removed doctype header (redundant)
buttons edited
grammar
css added to index
scrapping to change to a different approach...

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>A.I. Tech</title>
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel = "stylesheet" type= "text/css" href="css/bottomsection.css"/>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -100,22 +101,6 @@
 
     <!--I am not sure why the !DOCTYPE was added again with an additional header so we may want to merge the two up top, I would also refrain from trying inline coding because it might clash with whatever code you have in your JS file.-->
 
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <style>
-          /* CSS styles for the bottom section */
-          .bottom-section {
-            background-color: #3498db;
-            padding: 20px;
-            align: center;
-          }
-        </style>
-      </head>
-      <body>
-        <!-- Project Overview -->
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn">
             Lessons We've Learned Along the Way
@@ -124,20 +109,18 @@
         </div>
 
         <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">
-            How We Created AI Tech</button
-          >button>
+          <button onclick="myFunction()" class="dropbtn"> How We Created AI Tech </button>
           <div id="myDropdown" class="dropdown-content">
             <div class="popup" onclick="myFunction()">
-              Phase1:Creating a New Running HTML
+              Phase 1: Creating a New Running HTML
               <span class="popuptext" id="myPopup">Popup text...</span>
             </div>
             <div class="popup" onclick="myFunction()">
-              Phase 2:Drawing the Website's Illstruations
+              Phase 2: Drawing the Website's Illustrations
               <span class="popuptext" id="myPopup">Popup text...</span>
             </div>
             <div class="popup" onclick="myFunction()">
-              Phase 3:Event Listeners and Hover Functions in Javascript
+              Phase 3: Event Listeners and Hover Functions in Javascript
               <span class="popuptext" id="myPopup">Popup text...</span>
             </div>
             <div class="popup" onclick="myFunction()">
@@ -148,5 +131,3 @@
         </div>
       </body>
     </html>
-  </body>
-</html>
