--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <body>
 
 <!--Dividing section-->
-<div class="divide-bar"><h1>How AI Technology Came to Life</h1></div>
+<div class="divide-bar"><h1>The 7 Main  Types of Artifical Intelligence </h1></div>
 <div id="process-container">
   <p>The Creation Process</p>
 </div>
