--- a/index.html
+++ b/index.html
@@ -114,32 +114,29 @@
 <div id="process-container">
   <p>The Creation Process</p>
 </div>
-  <div class="How AI Technology Came to Life (The Creation Process)-section">
- <p>Phase 1: Creating New HTML
+  <div class="seven types of Artificial Intelligence-section">
+ <p>Narrow AI or Also Known As ANI
     
-For our project, AI Technology, the very first task on our team's to-do list was to create a brand new HTML file from scratch that 
-included the main elements of our webpage and crucial details for it's overall structure. The basic idea of our project was to create 
-an immersive and highly interactive tool that educates users on the history of artificial intelligence, how it's been incorporated into 
-particular job fields and that highlights the inaccuracy of  AI, from time to time. As for the overall design, of our webpage, our team 
-decided that we wanted to include the two main images of people and a single robot, a historical timeline of important events that's 
-occurred in reference to AI technology and a bottom section that describes more in-depthly the creation process. As for the 
-illustrations of people that the main face of our webpage will include, when users hover them a paragraph of text should 
-appear that states fact-checked and peer-reviewed information regarding how AI technology has impacted the labor force,both 
-positively and negatively and how/why it may not always be trustworthy. Additionally, when users hover over our robot, it 
-should angrily shake and generate random falsified information instead. To do such, we added numerous different sections to our 
-HTML, like a "People" section that provides each individual person with their own button id's and "enlarge" functions, a dividing 
-section that explains what AI is in general, and a bottom section for additional links/info.</p>
+Narrow AI is any kind of artificial intelligence system and/or form of AI technology that's sole purpose is to complete a set of
+very specific actions or basic commands. While ANI's are created with the goal in mind of serving and exceling in a cognitive 
+capability, this particular sub-category of AI technologies still aren't able to independently learn new skills that it's not
+already programmed and/or wasn't intially designed to learn. These kind of technologies are developed by combining a subfield of 
+artifical intelligence called "machine learning" with neural network algorithms to fucntion properly and accomplish the specificed 
+tasks it's programmed to complete. Through machine learning, AI systems are provided with the ability to process data and statistics, 
+while simultaneously applying problem-solving strategies that are similar to that of strategies used by actual people, like that of 
+trail and error, to improve it's own processes and "think" at faster rates. Examples of such A.I. include image recognition software,
+self-driving cars, and AI virtual assistants.</p>
 
 
 
-<p>Phase 2: Drawing the Illstruations
+<p>Artifical Genral Intelligence (AGI)
 
 The main images that we utilized for AI Technology, of the people and the robot were hand-drawn using Abode Illustrator 
 and then converted into vector images. After they were converted, group member, Savvy Burch linked the inrcedible 
 illustrations they had made directly into our main index.html and aligned each image, fitting them into a flex 
 container/flexbox.</p>
 
-<p>Phase 3: Event Listeners and Hover Functions
+<p>Artificial Superintelligence
 
 For the third phase, we shifted our attention over to implmenting the main basic functions that we wanted our webpage to have 
 through Javascript and created four different Javascript files. For the first file, group member, Manuel Marshutz, formatted and 
@@ -150,14 +147,25 @@ supposed to appear above the people, of our website, by applying callback functi
 nodes.js file, using the data structure to set parameters for various elements like that of width, height, size, and etc.. He then 
 added event listeners and various functions for each node.</p>
 
-<p>Phase 4: Stylizing Text and Other Elements
+<p>Reactive Machine AI
 
 .....
 </p>
 
-<p>Phase 5: Finding Sources and Research
+<p>Limited Memory AI
 
 ...
+</p>
+
+<p>Theory of Mind AI
+
+  .....
+</p>
+
+<p>Self-Aware AI
+
+.....
+
 </p>
 
   <script src="script.js"></script>
