--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
  <p>Narrow AI or Also Known As ANI
     
 Narrow AI is any kind of artificial intelligence system and/or form of AI technology that's sole purpose is to complete a set of
-very specific actions or basic commands. While ANI's are created with the goal in mind of serving and exceling in a cognitive 
+very specific actions or basic commands. While ANI's are created with the intended goal in mind of serving and exceling in a cognitive 
 capability, this particular sub-category of AI technologies still aren't able to independently learn new skills that it's not
 already programmed and/or wasn't intially designed to learn. These kind of technologies are developed by combining a subfield of 
 artifical intelligence called "machine learning" with neural network algorithms to fucntion properly and accomplish the specificed 
@@ -131,25 +131,24 @@ self-driving cars, and AI virtual assistants.</p>
 
 <p>Artifical Genral Intelligence (AGI)
 
-The main images that we utilized for AI Technology, of the people and the robot were hand-drawn using Abode Illustrator 
-and then converted into vector images. After they were converted, group member, Savvy Burch linked the inrcedible 
-illustrations they had made directly into our main index.html and aligned each image, fitting them into a flex 
-container/flexbox.</p>
+Artificial General Intelligence and/or general AI is any form of artificial intelligence that's capacity for thinking, learning, and 
+preforming more closely resembles that of a real person, as it's able to preform more divesive and detailed directions/tasks. While 
+AGI's are still a working progress, the fundamental framework for this type of AI may be constructed from technologies such as 
+supercomputers, quantum hardware and generative AI models like that of ChatGPT.</p>
+
 
 <p>Artificial Superintelligence
 
-For the third phase, we shifted our attention over to implmenting the main basic functions that we wanted our webpage to have 
-through Javascript and created four different Javascript files. For the first file, group member, Manuel Marshutz, formatted and 
-coded our index.js file for the team and layed out the basic framework for our website. Within, the file he added background nodes 
-and event listeners so that every time one of the people were hovered over their illustration would be enlarged and the background 
-behind them would slightly darken.He then added event listeners to box 1 and a separate Javascript for the popup content that's 
-supposed to appear above the people, of our website, by applying callback functions. Next, Manuel also created our Javascript, 
-nodes.js file, using the data structure to set parameters for various elements like that of width, height, size, and etc.. He then 
-added event listeners and various functions for each node.</p>
+Artificial Superintelligence and/or super AI is more of a figment of the imgaination and is showcased through numerous science fiction movies 
+like that of The Termninator and Machina. It's the infamously known theroy that artificial intelligence will become significantly more 
+knowledgable and efficient than humans, eventually becoming the backbone of another sub-genre of AI called self-aware AI and other 
+individualistic, robotic projects. As CEO of the AI writing company, Jasper, Dave Rogenmoser once said himself,"Artificial superintelligence
+will become by far the most capable forms of intelligence on earth.... It will have the intelligence of human beings and will be exceedingly
+better at everything that we do."</p>
 
 <p>Reactive Machine AI
 
-.....
+The 
 </p>
 
 <p>Limited Memory AI
