--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ better at everything that we do."</p>
 
 <p>Reactive Machine AI
 
-The 
+Reactive Machine AI's are 
 </p>
 
 <p>Limited Memory AI
