changes to html and css
spelling errors in bottomsection css
formatting with html
names changed for bottomsection.js and bottomsection.css for compatibility.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>A.I. Tech</title>
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/bottomsection.css" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -97,22 +98,10 @@
         </p>
       </div>
     </div>
-
-    <!--I am not sure why the !DOCTYPE was added again with an additional header so we may want to merge the two up top, I would also refrain from trying inline coding because it might clash with whatever code you have in your JS file.-->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, intial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="css/style.css" />
-</head>
-<body>
-
 <!--Dividing section-->
 <div class="divide-bar"><h1>How AI Technology Came to Life</h1></div>
 <div id="process-container">
-  <p>The Creation Process</p>
+  <h2>The Creation Process</h2>
 </div>
   <div class="How AI Technology Came to Life (The Creation Process)-section">
  <p>Phase 1: Creating New HTML
