--- a/index.html
+++ b/index.html
@@ -137,12 +137,21 @@ better at everything that we do."</p>
 
 <p>Reactive Machine AI
 
-Reactive Machine AI's are 
+While reactive machines are the most fundamental type of artificial intelligence, they are also greatly limited in their ability to 
+store memory, learn from past experiences and thus, modify their own functionality through experiences. They're msotly useful for 
+preforming basic autonomous functions, such as filtering spam from email inbox's and/or recommending items based on personal 
+shopping history. An example of sucb would be that of the reactive machine, Deep Blue, whihc in 1997 was able to read realtime 
+cues during a chess match against grandmaster, Garry Kasparov and actually beat him. 
 </p>
 
 <p>Limited Memory AI
 
-...
+Limited Memory AI is any kind of artificial intelligence tool that can make predictions from previously retrieved and stored data. 
+It's able to preform tasks based on the knowledge that it acquries from the data it's saved up and applies a subset of machine
+learning called "Deep Learning" that resembles the function of nenrons in the human brain. From such, different variations of AI 
+like Limited Memory AI are able to gather information from experiences and "learn" ways to enahnce the accruacy of themselves 
+gradually. The limited memory model represents a majority of AI applicants and can be employed in a variety settings that range 
+from chatbots to self-driving cars. In fact, examples of this include chatbots and self-driving cars.
 </p>
 
 <p>Theory of Mind AI
