--- a/index.html
+++ b/index.html
@@ -148,24 +148,22 @@ cues during a chess match against grandmaster, Garry Kasparov and actually beat 
 
 Limited Memory AI is any kind of artificial intelligence tool that can make predictions from previously retrieved and stored data. 
 It's able to preform tasks based on the knowledge that it acquries from the data it's saved up and applies a subset of machine
-learning called "Deep Learning" that resembles the function of nenrons in the human brain. From such, different variations of AI 
+learning called "Deep Learning" that resembles the function of neurons in the human brain. From such, different variations of AI 
 like Limited Memory AI are able to gather information from experiences and "learn" ways to enahnce the accruacy of themselves 
 gradually. The limited memory model represents a majority of AI applicants and can be employed in a variety settings that range 
-from chatbots to self-driving cars. In fact, examples of this include chatbots and self-driving cars.
-</p>
+from chatbots to self-driving cars. In fact, specific forms of this include AI include chatbots and virtual assistants and
+self-driving cars.</p>
 
 <p>Theory of Mind AI
 
-  .....
+....
 </p>
 
 <p>Self-Aware AI
 
 .....
 
-</p>
-
-  <script src="script.js"></script>
+</p>   
   </body>
   </html>
 
