--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>A.I. Tech</title>
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/bottomsection.css" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,8 +21,8 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="./js/nodes.js"></script>
+    <script type = "text/javascript" src="./js/tracery.js" defer></script>
     <script type="text/javascript" src="./js/index.js" defer></script>
-    <script type="text/javascript" src="./js/bottomsection.js" defer></script>
   </head>
   <body>
     <!--CANVAS BACKDROP-->
@@ -103,10 +102,10 @@
 <div id="process-container">
   <h2>The Creation Process</h2>
 </div>
-  <div class="seven types of Artificial Intelligence-section">
- <p>Narrow AI or Also Known As ANI
+  <div class="aitypes">
+ <h2>Narrow AI or Also Known As ANI</h2>
     
-Narrow AI is any kind of artificial intelligence system and/or form of AI technology that's sole purpose is to complete a set of
+<p>Narrow AI is any kind of artificial intelligence system and/or form of AI technology that's sole purpose is to complete a set of
 very specific actions or basic commands. While ANI's are created with the intended goal in mind of serving and exceling in a cognitive 
 capability, this particular sub-category of AI technologies still aren't able to independently learn new skills that it's not
 already programmed and/or wasn't intially designed to learn. These kind of technologies are developed by combining a subfield of 
@@ -116,47 +115,41 @@ while simultaneously applying problem-solving strategies that are similar to tha
 trail and error, to improve it's own processes and "think" at faster rates. Examples of such A.I. include image recognition software,
 self-driving cars, and AI virtual assistants.</p>
 
+<br>
 
+<h2>Artifical Genral Intelligence (AGI)</h2>
 
-<p>Artifical Genral Intelligence (AGI)
-
-Artificial General Intelligence and/or general AI is any form of artificial intelligence that's capacity for thinking, learning, and 
+<p>Artificial General Intelligence and/or general AI is any form of artificial intelligence that's capacity for thinking, learning, and 
 preforming more closely resembles that of a real person, as it's able to preform more divesive and detailed directions/tasks. While 
 AGI's are still a working progress, the fundamental framework for this type of AI may be constructed from technologies such as 
 supercomputers, quantum hardware and generative AI models like that of ChatGPT.</p>
 
 
-<p>Artificial Superintelligence
+<h2>Artificial Superintelligence</h2>
 
-Artificial Superintelligence and/or super AI is more of a figment of the imgaination and is showcased through numerous science fiction movies 
+<p>Artificial Superintelligence and/or super AI is more of a figment of the imgaination and is showcased through numerous science fiction movies 
 like that of The Termninator and Machina. It's the infamously known theroy that artificial intelligence will become significantly more 
 knowledgable and efficient than humans, eventually becoming the backbone of another sub-genre of AI called self-aware AI and other 
 individualistic, robotic projects. As CEO of the AI writing company, Jasper, Dave Rogenmoser once said himself,"Artificial superintelligence
 will become by far the most capable forms of intelligence on earth.... It will have the intelligence of human beings and will be exceedingly
 better at everything that we do."</p>
 
-<p>Reactive Machine AI
+<h2>Reactive Machine AI</h2>
 
-Reactive Machine AI's are 
-</p>
+<p>Reactive Machine AI's are </p>
 
-<p>Limited Memory AI
+<h2>Limited Memory AI</h2>
 
-...
-</p>
+<p>...</p>
 
-<p>Theory of Mind AI
+<h2>Theory of Mind AI</h2>
 
-  .....
-</p>
+<p>.....</p>
 
-<p>Self-Aware AI
+<h2>Self-Aware AI</h2>
 
-.....
+<p>.....</p>
 
-</p>
-
-  <script src="script.js"></script>
   </body>
   </html>
 
